# ros-physical-ai-demos

./: .gitignore  README.md  pai.repos  pixi.toml
docker/: Dockerfile  docker-compose.yaml
docs/: DEVELOPMENT.md  so_arm_demo.md
pai_assets/: CMakeLists.txt  package.xml
pai_assets/hooks/: pai_assets.dsv.in
pai_assets/models/Camera_Arm/: camera_arm_visual.glb  model.config  model.sdf
pai_assets/models/Cube/: cube.glb  model.config  model.sdf
pai_assets/models/Lightbox/: lightbox_visual.glb  model.config  model.sdf
pai_assets/models/Tray/: model.config  model.sdf  tray.glb
pai_bringup/: CMakeLists.txt  package.xml
pai_bringup/config/control/: ros2_controllers.yaml
pai_bringup/config/lerobot/: follower_arm.json  leader_arm.json
pai_bringup/config/ros2_control/: so_arm_ros2_controllers.yaml
pai_bringup/config/rviz/: so_arm.rviz  so_arm_gz.rviz  so_arm_mujoco.rviz
pai_bringup/launch/: so_arm_gz_bringup.launch.py  so_arm_mujoco_bringup.launch.py
pai_bringup/mjcf/: scene.xml  so_arm101.xml
pai_bringup/pai_bringup/: lerobot_infer.py  lerobot_utils.py
pai_bringup/scripts/: lerobot_infer_node.py  lerobot_inference_node  test_lerobot_policy.py
pai_bringup/urdf/: so_arm101_mujoco.urdf.xacro  so_arm_gz.urdf.xacro
pai_data_collection/: CMakeLists.txt  README.md  package.xml
pai_data_collection/config/rosetta/: so_arm100.yaml  so_arm101.yaml
pai_data_collection/scripts/: arm_demo_positions.sh
pai_description/: CMakeLists.txt  package.xml
pai_description/world/: so_arm_in_lightbox.sdf
scripts/: install_ml_deps.sh
