<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pai_assets</name>
  <version>0.0.0</version>
  <description>Assets for Physical AI Demos</description>
  <maintainer email="yadunund@gmail.com">Yadunund Vijay</maintainer>
  <author email="cole.bsmr@gmail.com">Cole Biesemeyer</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
