<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pai_data_collection</name>
  <version>0.1.0</version>
  <description>Data collection tools for Physical AI demos using rosetta.</description>
  <maintainer email="franco.cipollone@ekumenlabs.com">Franco Cipollone</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosetta</exec_depend>
  <exec_depend>rosetta_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
